# sakharov

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
config/: default.toml
config/themes/: catppuccin-frappe.toml  catppuccin-latte.toml  catppuccin-macchiato.toml  catppuccin-mocha.toml  dracula.toml  everforest.toml  example.toml  gruvbox-light.toml  gruvbox.toml  kanagawa.toml  monokai.toml  nord-darker.toml  nord.toml  onedark.toml  rose-pine-dawn.toml  rose-pine-moon.toml  rose-pine.toml  solarized-light.toml  solarized.toml  tokyonight-day.toml  tokyonight-moon.toml  tokyonight-storm.toml  tokyonight.toml
docs/: commands.md  themes.md
examples/: demo.ipynb
src/: app.rs  buffer.rs  clipboard.rs  command.rs  config.rs  exec.rs  fold.rs  git.rs  highlight.rs  history.rs  indent.rs  input.rs  jump.rs  keymap.rs  kitty.rs  lang.rs  lsp.rs  lsp_manager.rs  main.rs  markdown.rs  mode.rs  motion.rs  notebook.rs  notebook_state.rs  notebook_ui.rs  popup.rs  popup_input.rs  popup_ui.rs  recovery.rs  render_util.rs  selection.rs  spinner.rs  splash.rs  statusline.rs  symbols.rs  theme.rs  ui.rs
src/exec/: buffers.rs  export.rs  format.rs  lsp.rs  mod.rs  notebook.rs  pickers.rs  scroll.rs  search.rs  text.rs
