[package]
name = "majorana"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mj"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
ropey = "1.6"
tree-sitter = "0.22"
tree-sitter-highlight = "0.22"
tree-sitter-rust = { version = "0.21", default-features = false }
tree-sitter-python = { version = "0.21", default-features = false }
tree-sitter-javascript = { version = "0.21", default-features = false }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
dirs = "5"
unicode-width = "0.2"
serde_json = "1"
base64 = "0.22"
libc = "0.2"
