[package]
name = "sakharov"
version = "0.2.0"
edition = "2021"
description = "A from-scratch TUI text editor with first-class Jupyter notebook support and LSP integration"
license = "MIT"
repository = "https://github.com/christian-johnson/text-editor"
keywords = ["editor", "tui", "jupyter", "notebook", "lsp"]
categories = ["text-editors", "command-line-utilities"]
rust-version = "1.76"

[[bin]]
name = "sv"
path = "src/main.rs"

# A TUI binary people `cargo install`: optimise for runtime speed and size.
[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
ropey = "1.6"
tree-sitter = "0.22"
tree-sitter-highlight = "0.22"
tree-sitter-rust = { version = "0.21", default-features = false }
tree-sitter-python = { version = "0.21", default-features = false }
tree-sitter-javascript = { version = "0.21", default-features = false }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
dirs = "5"
unicode-width = "0.2"
serde_json = "1"
base64 = "0.22"
libc = "0.2"
tree-sitter-toml-ng = "0.6"
tree-sitter-json = "0.21"
tree-sitter-bash = "0.21"
tree-sitter-go = "0.21"
tree-sitter-c = "0.21"
tree-sitter-css = "0.21"
tree-sitter-html = "0.20"
tree-sitter-yaml = "0.6"
